@@ -9,6 +9,7 @@ mlr_2.5:
 - classif.svm: added 'scale' param
 - plotFilterValuesGGVIS: sort and n_show are interactive, interactive flag removed
 - renamed getProbabilities to getPredictionProbabilities and deprecated getProbabilities
+- plots now use long names for measures where possible
 
 - new functions
 -- getPredictionTruth, getPredictionResponse
